# CBlock

./: CMakeLists.txt  main.c  shader.vert  shader_2d.frag  shader_2d.vert  shader_3d.vert
assets/: shader_3d.vert
src/: camera.c  camera.h  chunk.c  chunk.h  directions.c  directions.h  file.h  input.c  input.h  list.h  main.c  window.c  window.h  world.c  world.h
src/graphics/: mesh.c  mesh.h  mesher.c  mesher.h  meshing_info.c  meshing_info.h  resources.c  resources.h  sprite_batch.c  sprite_batch.h
